testsuite/tests/rename/should_fail/T19843e.hs
{-# LANGUAGE PatternSynonyms #-}

module T19843e where

import Prelude (undefined, map, Maybe(Just))

pattern Mup k = Just k

foo (Map k) = undefined
